[project]
name = "nettracer3d"
version = "1.5.7"
authors = [
  { name="Liam McLaughlin", email="liamm@wustl.edu" },
]
description = "GUI for intializing and analyzing networks from segmentations of three dimensional images."

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "Pillow",
    "matplotlib",
    "networkx",
    "opencv-python-headless",
    "openpyxl",
    "pandas",
    "tifffile",
    "qtrangeslider",
    "PyQt6",
    "pyqtgraph",
    "scikit-learn",
    "setuptools",
    "umap-learn",
    "numba",
    "lightgbm"]

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# GPU options (choose one)
CUDA11 = ["cupy-cuda11x"]
CUDA12 = ["cupy-cuda12x"]
cupy = ["cupy"] 

# Features
cellpose = ["cellpose[GUI]"]
viz = ["napari"]
rec = ["napari", "edt", "igraph", "leidenalg"]
edt = ["edt"]

# All non-GPU features
all = ["cellpose[GUI]", "napari", "edt"]

[project.scripts]
nettracer3d = "nettracer3d.run:main"

[project.urls]
Documentation = "https://nettracer3d.readthedocs.io/en/latest/"
Youtube_Tutorial = "https://www.youtube.com/watch?v=_4uDy0mzG94&list=PLsrhxiimzKJMZ3_gTWkfrcAdJQQobUhj7"
Installer = "https://github.com/mclaughlinliam3/NetTracer3D/releases"
Paper = "https://doi.org/10.64898/2026.03.25.714104"